2006-03-14  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/display/nr-arena-item.cpp,
	  src/display/nr-arena-item.cpp, src/gc-finalized.h, src/gc-managed.h,
	  src/gc-soft-ptr.h, src/selection.h, src/selection.cpp:

	  Replace GC::Managed<>::clearOnceInaccessible with GC::soft_ptr<>

2006-03-14  MenTaLguY  <mental@rydia.net>

	* src/debug/event.h, src/debug/gc-heap.h, src/debug/heap.h,
	  src/debug/logger.cpp, src/debug/simple-event.h,
	  src/debug/sysv-heap.h, src/jabber_whiteboard/deserializer.cpp,
	  src/jabber_whiteboard/message-utilities.cpp,
	  src/jabber_whiteboard/message-utilities.h,
	  src/jabber_whiteboard/node-tracker-observer.h,
	  src/jabber_whiteboard/serializer.cpp,
	  src/jabber_whiteboard/serializer.h,
	  src/sp-object.cpp, src/util/share.cpp, src/util/share.h,
	  src/xml/attribute-record.h, src/xml/comment-node.h,
	  src/xml/composite-node-observer.cpp, src/xml/composite-node-observer.h,
	  src/xml/event.cpp, src/xml/event.h, src/xml/log-builder.cpp,
	  src/xml/log-builder.h, src/xml/node-observer.h, src/xml/repr-io.cpp,
	  src/xml/simple-node.cpp, src/xml/simple-node.h,
	  src/xml/simple-session.cpp, src/xml/simple-session.h,
	  src/xml/text-node.h:

	  shared_ptr -> ptr_shared

2006-03-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/svg/svg-color.cpp (sp_svg_write_color): More readable colour
	  names when possible: e.g. `red', `#cfc'.

2006-03-10  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp:

	  Shift-drop now sets stroke on target objects.
	
2006-03-11  MenTaLguY  <mental@rydia.net>

	* src/sp-object.cpp: experiment to verify that we can safely release
	  before removing object from document tree

2006-03-10  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/swatches.cpp:

	  Changed color dragging to have a color preview.
	
2006-03-09  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp:

	  Initial cut of color drag-n-drop to items on canvas.
	
2006-03-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
